# aivo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: canary.yml  ci.yml  deny.yml  release.yml  size-check.yml  test.yml
docs/: PLUGIN-PROTOCOL.md
npm/: package.json
src/: cli.rs  cli_args.rs  constants.rs  errors.rs  key_resolution.rs  lib.rs  main.rs  run.rs  style.rs  tui.rs  version.rs
src/agent/: apply_patch.rs  ask.rs  checkpoint.rs  compaction.rs  engine.rs  grant_store.rs  hooks.rs  jobs.rs  lsp.rs  mcp.rs  memory.rs  mod.rs  notes.rs  packs.rs  plan_mode.rs  protocol.rs  retry.rs  sandbox.rs  serve_client.rs  skills.rs  subagents.rs  system_prompt.rs  tokens.rs  tool_search.rs  tools.rs  verify.rs
src/agent/builtin_agents/: advisor.md  aivo-guide.md  evaluate.md  explorer.md  verification.md
src/agent/builtin_skills/: create-agent.md  create-skill.md
src/agent/engine/: config.rs  conversation.rs  subagent.rs  tool_batch.rs  turn.rs
src/agent/engine/tests/: approvals.rs  compaction_budget.rs  compaction_pinning.rs  context_usage.rs  external_tools.rs  helpers.rs  history.rs  hooks.rs  jobs.rs  mod.rs  plan_mode.rs  plan_tracking.rs  review_gate.rs  rewind.rs  secrets_sandbox.rs  selfcorrect.rs  session.rs  subagent_profiles.rs  subagents.rs  thinking.rs  tools_wiring.rs  turn_loop.rs
src/agent/tools/: bash.rs  files.rs  remote.rs  safety.rs  search.rs  specs.rs  web.rs
src/agent/tools/tests/: bash.rs  edits.rs  helpers.rs  mod.rs  read_write.rs  remote.rs  safety.rs  search.rs  specs.rs  web.rs
src/commands/: account.rs  agents.rs  aivo_guide.md  alias.rs  amp.rs  audio.rs  chat.rs  chat_agent_oneshot.rs  chat_response_parser.rs  chat_tui.rs  code.rs  code_agent_oneshot.rs  code_request_builder.rs  code_response_parser.rs  code_tui.rs  code_tui_format.rs  guide.rs  hf.rs  image.rs  info.rs  keys.rs  login.rs  logs.rs  mcp.rs  mcp_serve.rs  mod.rs  models.rs  packs.rs  plugins.rs  run.rs  serve.rs  share.rs  skills.rs  start.rs  stats.rs  update.rs
src/commands/chat_tui/: app_state_impl.rs  event_loop_impl.rs  input_impl.rs  key_handler_impl.rs  menu.rs  overlay_render_impl.rs  render.rs  render_impl.rs  runtime_impl.rs  session_impl.rs  shared.rs  storage.rs  system.rs  tests.rs
src/commands/code_tui/: account_impl.rs  app_state_impl.rs  event_loop_impl.rs  input_impl.rs  key_handler_impl.rs  live_impl.rs  menu.rs  overlay_render_impl.rs  queue_impl.rs  render.rs  render_impl.rs  runtime_impl.rs  session_impl.rs  shared.rs  storage.rs  system.rs  tests.rs
src/commands/code_tui/tests/: cards.rs  command_menu.rs  composer.rs  event_stream.rs  goal.rs  helpers.rs  local_commands.rs  mcp.rs  mod.rs  models_keys.rs  mouse.rs  overlays.rs  pickers.rs  plan.rs  queue.rs  render.rs  session_persist.rs  session_resume.rs  skills.rs  slash_commands.rs  status_footer.rs  thinking.rs  tools_render.rs  turn_lifecycle.rs
src/data/: model_limits.json  providers.json
src/plugin/: endpoint.rs  manifest.rs  mod.rs  registry.rs  source.rs  stats.rs
src/services/: account_store.rs  acp_client.rs  ai_launcher.rs  ansi.rs  anthropic_chat_request.rs  anthropic_chat_response.rs  anthropic_gemini_bridge.rs  anthropic_route_pipeline.rs  anthropic_router.rs  anthropic_to_openai_router.rs  api_key_store.rs  atomic_write.rs  audio_cache.rs  bridge_defaults.rs  browser_open.rs  chat_session_store.rs  claude_oauth.rs  code_session_store.rs  codex_app_wrapper.rs  codex_home_shadow.rs  codex_oauth.rs  context_ingest.rs  context_render.rs  copilot_auth.rs  copilot_router.rs  cursor_acp.rs  cursor_home_shadow.rs  cursor_model_router.rs  device_auth.rs  device_login_ui.rs  dns_resolver.rs  effort.rs  environment_injector.rs  export_crypto.rs  gemini_home_shadow.rs  gemini_router.rs  global_stats.rs  grok_oauth.rs  http_debug.rs  http_utils.rs  (+57 more)
src/services/cursor_bridge/: anthropic.rs  gemini.rs  mcp.rs  mod.rs  openai_chat.rs  responses.rs  tests.rs
tests/: cli_parsing.rs  cli_smoke.rs  debug_log_chat.rs  debug_log_streaming.rs  environment_injection.rs  key_lifecycle.rs  mcp_serve_integration.rs  plugin_endpoint.rs  plugin_install.rs  router_e2e.rs
tests/support/: mod.rs
