[package]
name = "aivo"
version = "0.36.0"
edition = "2024"
rust-version = "1.95"
authors = ["yuanchuan"]
description = "A lightweight CLI for managing API keys and running Claude Code, Codex, and Gemini CLI across providers"
license = "MIT"
repository = "https://github.com/yuanchuan/aivo"

[lib]
doctest = false

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "unstable-rendered-line-info"] }
portable-pty = "0.9"

# HTTP
http = "1"
# Keep env/system proxy support on so Termux and proxy-backed networks match curl.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "system-proxy"] }
tokio = { version = "1.43", features = ["rt", "macros", "process", "signal", "time", "fs", "net", "sync", "io-std", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = { version = "0.12", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }

# Encryption
aes = "0.8"
aes-gcm = "0.10"
pbkdf2 = "0.12"
argon2 = "0.5"
sha2 = "0.10"
ed25519-dalek = "2"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }
# Verify-only minisign: authenticates self-update downloads against an
# embedded public key (src/commands/update.rs). No signing on the client.
minisign-verify = "0.2.5"

# Utils
bytes = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1.0"
shlex = "1.3"
unicode-width = "0.2"
tempfile = "3.0"
url = "2"

[target.'cfg(target_env = "musl")'.dependencies]
# Static-musl needs an explicit DNS resolver; see src/services/dns_resolver.rs.
hickory-resolver = "0.26.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-only filesystem write confinement for the agent's run_bash sandbox
# (src/agent/sandbox.rs). Pure-Rust, no C deps; degrades on pre-5.13 kernels.
landlock = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_Threading", "Win32_Security_Credentials"] }


[features]
# Test-only feature: reduces PBKDF2 iterations so the test suite runs fast.
# Double-underscore prefix signals "internal/private" — never enable from
# release builds or downstream crates. A runtime guard in
# main.rs::fast_crypto_guard refuses to run binaries built with this feature
# against real user config (override: AIVO_TEST_FAST_CRYPTO_OK=1).
__internal_test_fast_crypto = []

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
incremental = true

[profile.test.package."*"]
debug = false

[profile.release]
opt-level = "z"     # Optimize for size (most aggressive)
lto = true
strip = true
codegen-units = 1
panic = "abort"     # Remove unwinding code
